--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,8 @@ AllCops:
 Style/HashSyntax:
   UseHashRocketsWithSymbolValues: true
 
+# The following is excluded because it is within the shipped Gem
+# the cop is searching for the gem itself, so exclude this file
+Bundler/GemFilename:
+  Exclude:
+    - lib/openhab/dsl/gems.rb 
