refactor(rubocop): add optional rubocop gems and fix issues
all are autocorrects, except the eliding of the md5 method in github.rake

also revert rubocop changes to autogenerated binstubs, and exclude them


Former-commit-id: d3b6fbf1ec848512f502003550ecd99c6cb5ad21

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,16 @@
+require:
+  - rubocop-performance
+  - rubocop-rake
+
+inherit_mode:
+  merge:
+    - Exclude # we want our Exclude to build on the excludes from the default config
+
 AllCops:
   TargetRubyVersion: 2.5
   NewCops: enable
-  SuggestExtensions: false
+  Exclude:
+    - bin/*
 
 Style/HashSyntax:
   UseHashRocketsWithSymbolValues: true
