--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,6 +28,7 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 # Build settings
 markdown: kramdown
 remote_theme: pmarsceill/just-the-docs
+theme: just-the-docs
 plugins:
   - jekyll-feed
 
