chore(rubocop): explicitly allow openhab globals
instead of having to disable it at each usage

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,15 @@ Style/Documentation:
   Enabled: false
 Style/HashSyntax:
   UseHashRocketsWithSymbolValues: true
+Style/GlobalVars:
+  AllowedVariables: # these globals are set by OpenHAB, and we can't change their name
+   - $actions
+   - $ir
+   - $rules
+   - $se
+   - $scriptExtension
+   - $things
+
 Gemspec/RequireMFA:
   Enabled: false
 
