test: bring in rspec-openhab-scripting gem
and convert (most) _type.feature tests to rspec in-process tests.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /.bundle/
+/.irb_history
+/.karaf
 /.yardoc
 /_yardoc/
 /_site/
@@ -8,6 +10,7 @@
 /doc/
 /lib/openhab/dsl/gems.locked
 /pkg/
+/spec/examples.txt
 /spec/reports/
 /tmp/
 /.obsidian/
