move ensure tests to rspec
and fix a couple bugs introduced in refactors

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -44,6 +44,8 @@ RSpec/MessageSpies:
   Enabled: false
 RSpec/MultipleExpectations:
   Enabled: false
+RSpec/MultipleMemoizedHelpers:
+  Enabled: false
 RSpec/NestedGroups:
   Enabled: false
 
