resolve broken links in yard docs
and now require that yard runs completely clean

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           bundler-cache: true
       - name: Yard Coverage
         run: |
+          bin/yard
           bin/yard stats --list-undoc
           bin/yard stats | grep "100.00% documented"
 
