clean up cucumber a bit more
 * no need to keep multiple separate logs - cucumbers specs are
   small enough now
 * set a (generous) timeout on github actions
 * no need to filter out (non-existing) @wip/@not_implemented features

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -156,6 +156,7 @@ jobs:
           key: OpenHAB-setup-${{ hashFiles('.bundlehash', 'Rakefile', 'rakelib/openhab.rake') }}-${{ matrix.openhab_version }}
       - name: Cucumber
         run: bin/rake features
+        timeout-minutes: 8
       - name: Upload OpenHAB Logs
         uses: actions/upload-artifact@v3
         if: failure()
