clean up .gitignore a bit
 * jekyll and friends are no longer used
 * keep developer-specific ignores out of the global ignore
   (they can use ~/.gitignore, or .git/info/excludes)

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,14 @@
-/.bundle/
 /.byebug_history
 /.irb_history
+/.java-version
 /.karaf
 /.yardoc
-/_yardoc/
-/_site/
-/docs/.jekyll-cache/
-/docs/yard/
 /coverage/
 /doc/
+/docs/yard/
 /lib/openhab/dsl/gems.locked
 /pkg/
 /spec/examples.txt
 /spec/reports/
 /tmp/
-/.obsidian/
-openhab.code-workspace
-/.idea/
-.java-verison
-.jekyll-cache/
-.sass-cache/
+/*.gem
