--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -199,9 +199,10 @@ jobs:
       - uses: actions/checkout@v2
       # We need to use the setup-ruby's non cached bundler action here
       # otherwise the gem build will fail because it is not a development instance
-      - uses: actions/setup-ruby@v1
+      - uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ env.RUBY_VERSION }}
+          bundler-cache: false
       - uses: actions/setup-node@v2
         with:
           node-version: "15"
