$dependency_listener was renamed in openhab-addons

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -75,7 +75,7 @@ Style/Documentation:
 Style/GlobalVars:
   AllowedVariables: # these globals are set by OpenHAB, and we can't change their name
    - $actions
-   - $dependency_listener
+   - $dependencyListener
    - $events
    - $ir
    - $rules
