use github-actions user for gh-pages commits
[ci skip]

--- a/.github/workflows/yardoc.yml
+++ b/.github/workflows/yardoc.yml
@@ -37,3 +37,5 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./docs/yard/
           destination_dir: ${{ steps.destination_dir.outputs.DESTINATION_DIR }}
+          user_name: 'github-actions[bot]'
+          user_email: '41898282+github-actions[bot]@users.noreply.github.com'
