fix yardoc deploy with tags
introduce delay so that a new tag pushed at the same time as a branch
won't have a non fast-forward race condition

--- a/.github/workflows/yardoc.yml
+++ b/.github/workflows/yardoc.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Determine Destination Dir
         id: destination_dir
         run: ruby -e 'ref_name = "${{ github.ref_name }}"; ref_name = ref_name[1..-1].split(".")[0..1].join(".") if "${{ github.ref_type }}" == "tag"; puts "DESTINATION_DIR=#{ref_name}"' >> $GITHUB_OUTPUT
+      - name: Avoid race condition with push to main branch
+        if: ${{ github.ref_type == 'tag' }}
+        run: sleep 15
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
